Generate docs for resources
